# ros_signalling

./: CMakeLists.txt  README.md  package.xml
include/: littleWire.h  littleWire_util.h
msg/: blink.msg
ros_signalling/: CMakeLists.txt  package.xml
ros_signalling/msg/: animation.msg  blink.msg  frame.msg
ros_signalling_ws2812/: CMakeLists.txt  package.xml
ros_signalling_ws2812/include/: littleWire.h  opendevice.h
ros_signalling_ws2812/src/: ros_signalling_node.cpp
ros_signalling_ws2812/src/littlewire/: littleWire.c
src/: ros_signalling_node.cpp
src/littlewire/: littleWire_util.c
